# chess-opening-recommender

./: .gitignore  .pre-commit-config.yaml  .vercelignore  README.md  config.json  pyproject.toml  requirements.txt  vercel.json
api/: index.py
data/: Chessanonymous1_features.parquet  Chessanonymous1_games.parquet  Chessanonymous1_style_vector.csv  elite_features.parquet
frontend/: index.html
notebooks/: clustering.ipynb  data_collection.ipynb  feature_engineering.ipynb  opening_recommendation.ipynb
src/api/: data_loader.py  main.py
src/data/: Chessanonymous1_games.pgn  Chessanonymous1_profile.json
src/recommender/: clustering.py  data_fetcher.py  feature_engineering.py  opening_recommender.py
storage/: elite_style_vectors.csv  lichess_elite_2025-05.parquet
