[project]
name = "chess-opening-recommender"
version = "0.1.0"
description = ""
authors = [
    {name = "nickmvega",email = "nvega@uchicago.edu"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "numpy (>=1.26.4,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "zstandard (>=0.23.0,<0.24.0)",
    "duckdb (>=1.3.2,<2.0.0)",
    "python-chess (>=1.999,<2.0)",
    "gensim (>=4.3.3,<5.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "faiss-cpu (>=1.11.0.post1,<2.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "berserk (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
pytest = "^8.4.1"
pre-commit = "^4.2.0"
ipykernel = "^6.29.5"

